# orbit_generation

./: CMakeLists.txt  README.md  package.xml
bag/bag/: drink_2019-12-24-14-45-57.bag  drink_2019-12-24-14-46-15.bag  drink_2019-12-24-14-46-24.bag  drink_2019-12-24-14-46-32.bag  drink_2019-12-24-14-46-46.bag  drink_2019-12-24-14-46-59.bag  drink_2019-12-24-14-46-7.bag  drink_2019-12-24-14-47-10.bag  drink_2019-12-24-14-47-21.bag  drink_2019-12-24-14-47-34.bag  drink_2019-12-24-14-47-49.bag  drink_2019-12-24-14-48-16.bag  drink_2019-12-24-14-48-28.bag  drink_2019-12-24-14-48-3.bag  drink_2019-12-24-14-48-41.bag  drink_2019-12-24-14-48-50.bag  drink_2019-12-24-14-48-58.bag  drink_2019-12-24-14-49-19.bag  drink_2019-12-24-14-49-34.bag  drink_2019-12-24-14-49-49.bag  drink_2019-12-24-14-49-9.bag  drink_2019-12-24-14-50-1.bag  drink_2019-12-24-14-50-19.bag  drink_2019-12-24-14-50-30.bag  drink_2019-12-24-14-50-32.bag  drink_2019-12-24-14-50-47.bag  drink_2019-12-24-14-50-9.bag  drink_2019-12-24-14-51-0.bag  drink_2019-12-24-14-51-20.bag  drink_2019-12-24-14-51-37.bag  drink_2019-12-24-14-51-49.bag  drink_2019-12-24-14-52-12.bag  drink_2019-12-24-14-52-27.bag  drink_2019-12-24-14-52-43.bag  drink_2019-12-24-14-52-59.bag  drink_2019-12-24-14-53-16.bag  drink_2019-12-24-14-53-34.bag  drink_2019-12-24-14-53-53.bag  drink_2019-12-24-14-54-26.bag  drink_2019-12-24-14-54-46.bag  (+1281 more)
bag/best1/: test_2020-2-1-15-54-56.bag  test_2020-2-1-15-55-11.bag  test_2020-2-1-15-55-23.bag  test_2020-2-1-15-55-47.bag  test_2020-2-1-15-56-1.bag  test_2020-2-1-15-56-17.bag  test_2020-2-1-15-56-24.bag  test_2020-2-1-15-56-35.bag  (+528 more)
result/: result_2020-2-1-19-28.csv
script/: spawn_shelf.sh
src/: orbit_generation.cpp
(+5127 files in other folders)
